docs_src/98.wip/jellyfin/jellyfin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-udp
  namespace: media
  annotations:
    metallb.universe.tf/allow-shared-ip: jellyfin-svc
  labels:
    app: enternal-dns
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.121
  externalTrafficPolicy: Local
  ports:
    - name: discovery
      port: 1900
      protocol: UDP
      targetPort: discovery
    - name: clients
      port: 7359
      protocol: UDP
      targetPort: clients
  selector:
    app: jellyfin
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-tcp
  namespace: media
  annotations:
    metallb.universe.tf/allow-shared-ip: jellyfin-svc
  labels:
    app: jellyfin
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.121
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 8096
      protocol: TCP
      targetPort: http
    - name: https
      port: 8920
      protocol: TCP
      targetPort: https
  selector:
    app: jellyfin
  sessionAffinity: None
