docs_src/98.wip/jellyfin/jellyfin-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jellyfin-external-ingress
  namespace: media
  labels:
    app: jellyfin
    tier: frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - jellyfin.yarr.wtf
    secretName: jellyfin-certs
  rules:
  - host: jellyfin.yarr.wtf
    http:
      paths:
      - path: /
        backend:
          serviceName: jellyfin-tcp
          servicePort: http
